[tool.poetry]
name = "algorithm-study"
version = "0.1.0"
description = ""
authors = ["Wycliffe-Kim <f16o@hanyang.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.9"
pydash = "^5.1.0"
toolz = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
tree="algorithm_study.tree.main:main"
bst="algorithm_study.bst.main:main"
heap="algorithm_study.heap.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
