[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Wycliffe-Kim <f16o@hanyang.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
pytest-watch = "^4.2.0"


[tool.pytest.ini_options]
pythonpath = "python"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
